[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/theme.tres" type="Theme" id=2]
[ext_resource path="res://fonts/passion_one.fnt" type="BitmapFont" id=3]

[node name="menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="container" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 512.0
margin/top = 128.0
margin/right = 2048.0
margin/bottom = 960.0
alignment = 0
__meta__ = {
"_edit_group_": true
}

[node name="title_label" type="Label" parent="container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 1536.0
margin/bottom = 229.0
custom_fonts/font = ExtResource( 3 )
text = "Slimey Soccer"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="1p_button" type="Button" parent="container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 233.0
margin/right = 1536.0
margin/bottom = 379.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "1 Player"
flat = true

[node name="2p_button" type="Button" parent="container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 383.0
margin/right = 1536.0
margin/bottom = 529.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "2 Player"
flat = true

[node name="settings_button" type="Button" parent="container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 533.0
margin/right = 1536.0
margin/bottom = 679.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Settings"
flat = true

[node name="quit_button" type="Button" parent="container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 683.0
margin/right = 1536.0
margin/bottom = 832.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = true

[node name="Label2" type="Label" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 1344.0
margin/right = 5120.0
margin/bottom = 1444.0
text = "Press f for fullscreen"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="container/1p_button" to="." method="_on_1p_button_pressed"]

[connection signal="pressed" from="container/2p_button" to="." method="_on_2p_button_pressed"]

[connection signal="pressed" from="container/quit_button" to="." method="_on_quit_button_pressed"]


